testsuite/poke.pkl/int-struct-type-diag-17.pk
/* { dg-do compile } */

type Foo = struct uint<*> { }; /* { dg-error "invalid total size.*\n.*got 0 bits" } */
